# auto-sales-bot

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  DESIGN_SYSTEM.md  PRODUCT_ANALYSIS.md  REVIEW_RESULTS.md  SECURITY_AUDIT.md  pyproject.toml
.claude/: WORKFLOW.md  memory.md
.claude/agents/: bot-developer.md  code-reviewer.md  db-architect.md  debugger.md  deploy-manager.md  docs-writer.md  mini-app-dev.md  security-auditor.md  tester.md
app/: api.py  auth.py  bot.py  config.py  constants.py  texts.py
app/data/: brands.py
app/handlers/: admin.py  photos.py  start.py  web_app.py
app/middlewares/: db.py
app/models/: __init__.py  ad_view.py  base.py  car_ad.py  favorite.py  photo.py  plate_ad.py  user.py
app/services/: car_ad_service.py  photo_service.py  plate_ad_service.py  user_service.py  view_service.py
app/utils/: formatting.py  helpers.py  mappings.py  notify.py  photo_storage.py  publish.py  rate_limiter.py  validators.py
migrations/: env.py
migrations/versions/: 070dade6a602_add_composite_index_photos.py  342550911eac_initial_models_user_car_ad_plate_ad_ad_.py  489f2a89e0c7_add_channel_message_id.py  652a0c987696_add_is_banned_to_users.py  add_ad_views.py  add_favorites_views_sold.py  add_region_and_has_gbo.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.css  App.tsx  api.ts  index.css  main.tsx
webapp/src/components/: AdCard.tsx  CharCounter.tsx  ContactFooter.tsx  DockBar.tsx  DuplicateWarning.tsx  EditFormWrapper.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  FavoriteButton.tsx  (+11 more)
(+26 files in other folders)
