[project]
name = "auto-sales-bot"
version = "0.1.0"
description = "Telegram bot for car sales announcements"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "aiohttp>=3.11",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
